# exo_cmake

./: CMakeLists.txt  README.md  test.bat
.github/workflows/: cm.yml  cmake.yml
cmake/: FirstOrganizedCMakeConfig.h.in  FirstOrganizedCmake.h.in
include/log_lib/: CMakeLists.txt  print_log.h
mains/: CMakeCache.txt  CMakeLists.txt  hello.cpp
src/log_lib/: CMakeLists - Copie.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  loglib.vcxproj  loglib.vcxproj.filters  print_log.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_version.cpp
